// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/card should render 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="msla-panel-card-container"
    data-automation-id="card-title"
    data-testid="card-title"
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "borderLeft": "4px solid rgba(71,71,71, 1)",
        "borderRadius": "2px",
      }
    }
    tabIndex={1}
  >
    <div
      className="msla-selection-box"
    />
    <div
      className="panel-card-main"
    >
      <div
        className="panel-card-header"
        role="button"
      >
        <div
          className="panel-card-content-container"
        >
          <div
            className="panel-card-content-gripper-section"
          />
          <div
            className="panel-card-content-icon-section"
          >
            <div
              className="ms-Spinner msla-card-header-spinner root-110"
            >
              <div
                className="ms-Spinner-circle ms-Spinner--medium circle-111"
              />
            </div>
          </div>
          <div
            className="panel-card-top-content"
          >
            <div
              className="panel-msla-title"
            >
              title
            </div>
          </div>
        </div>
      </div>
      <div
        className="msla-card-v2-footer"
      >
        <div
          className="msla-badges"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/card should render as cloned 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="msla-panel-card-container msla-card-ghost-image"
    data-automation-id="card-title"
    data-testid="card-title"
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "borderLeft": "4px solid rgba(71,71,71, 1)",
        "borderRadius": "2px",
      }
    }
    tabIndex={1}
  >
    <div
      className="msla-selection-box"
    />
    <div
      className="panel-card-main"
    >
      <div
        className="panel-card-header"
        role="button"
      >
        <div
          className="panel-card-content-container"
        >
          <div
            className="panel-card-content-gripper-section"
          />
          <div
            className="panel-card-content-icon-section"
          >
            <div
              className="ms-Spinner msla-card-header-spinner root-110"
            >
              <div
                className="ms-Spinner-circle ms-Spinner--medium circle-111"
              />
            </div>
          </div>
          <div
            className="panel-card-top-content"
          >
            <div
              className="panel-msla-title"
            >
              title
            </div>
          </div>
        </div>
      </div>
      <div
        className="msla-card-v2-footer"
      >
        <div
          className="msla-badges"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/card should render as draggable 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="msla-panel-card-container"
    data-automation-id="card-title"
    data-testid="card-title"
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "borderLeft": "4px solid rgba(71,71,71, 1)",
        "borderRadius": "2px",
      }
    }
    tabIndex={1}
  >
    <div
      className="msla-selection-box"
    />
    <div
      className="panel-card-main"
    >
      <div
        className="panel-card-header"
        role="button"
      >
        <div
          className="panel-card-content-container"
        >
          <div
            className="panel-card-content-gripper-section draggable"
          >
            <svg
              fill="none"
              height="12"
              viewBox="0 0 2 10"
              width="4"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 2V0H2V2H0ZM0 6V4H2V6H0ZM0 10V8H2V10H0Z"
                fill="#605E5C"
              />
            </svg>
          </div>
          <div
            className="panel-card-content-icon-section"
          >
            <div
              className="ms-Spinner msla-card-header-spinner root-110"
            >
              <div
                className="ms-Spinner-circle ms-Spinner--medium circle-111"
              />
            </div>
          </div>
          <div
            className="panel-card-top-content"
          >
            <div
              className="panel-msla-title"
            >
              title
            </div>
          </div>
        </div>
      </div>
      <div
        className="msla-card-v2-footer"
      >
        <div
          className="msla-badges"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/card should render as inactive 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="msla-panel-card-container inactive"
    data-automation-id="card-title"
    data-testid="card-title"
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "borderLeft": "4px solid rgba(71,71,71, 1)",
        "borderRadius": "2px",
      }
    }
    tabIndex={1}
  >
    <div
      className="msla-selection-box"
    />
    <div
      className="panel-card-main"
    >
      <div
        className="panel-card-header"
        role="button"
      >
        <div
          className="panel-card-content-container"
        >
          <div
            className="panel-card-content-gripper-section"
          />
          <div
            className="panel-card-content-icon-section"
          >
            <div
              className="ms-Spinner msla-card-header-spinner root-110"
            >
              <div
                className="ms-Spinner-circle ms-Spinner--medium circle-111"
              />
            </div>
          </div>
          <div
            className="panel-card-top-content"
          >
            <div
              className="panel-msla-title"
            >
              title
            </div>
          </div>
        </div>
      </div>
      <div
        className="msla-card-v2-footer"
      >
        <div
          className="msla-badges"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/card should render as selected 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="msla-panel-card-container msla-panel-card-container-selected"
    data-automation-id="card-title"
    data-testid="card-title"
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "borderLeft": "4px solid rgba(71,71,71, 1)",
        "borderRadius": "2px",
      }
    }
    tabIndex={1}
  >
    <div
      className="msla-selection-box selected"
    />
    <div
      className="panel-card-main"
    >
      <div
        className="panel-card-header"
        role="button"
      >
        <div
          className="panel-card-content-container"
        >
          <div
            className="panel-card-content-gripper-section"
          />
          <div
            className="panel-card-content-icon-section"
          >
            <div
              className="ms-Spinner msla-card-header-spinner root-110"
            >
              <div
                className="ms-Spinner-circle ms-Spinner--medium circle-111"
              />
            </div>
          </div>
          <div
            className="panel-card-top-content"
          >
            <div
              className="panel-msla-title"
            >
              title
            </div>
          </div>
        </div>
      </div>
      <div
        className="msla-card-v2-footer"
      >
        <div
          className="msla-badges"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/card should render with a context menu 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="msla-panel-card-container"
    data-automation-id="card-title"
    data-testid="card-title"
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "borderLeft": "4px solid rgba(71,71,71, 1)",
        "borderRadius": "2px",
      }
    }
    tabIndex={1}
  >
    <div
      className="msla-selection-box"
    />
    <div
      className="panel-card-main"
    >
      <div
        className="panel-card-header"
        role="button"
      >
        <div
          className="panel-card-content-container"
        >
          <div
            className="panel-card-content-gripper-section"
          />
          <div
            className="panel-card-content-icon-section"
          >
            <div
              className="ms-Spinner msla-card-header-spinner root-110"
            >
              <div
                className="ms-Spinner-circle ms-Spinner--medium circle-111"
              />
            </div>
          </div>
          <div
            className="panel-card-top-content"
          >
            <div
              className="panel-msla-title"
            >
              title
            </div>
          </div>
        </div>
      </div>
      <div
        className="msla-card-v2-footer"
      >
        <div
          className="msla-badges"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/card should render with an icon 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="msla-panel-card-container"
    data-automation-id="card-title"
    data-testid="card-title"
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "borderLeft": "4px solid rgba(71,71,71, 1)",
        "borderRadius": "2px",
      }
    }
    tabIndex={1}
  >
    <div
      className="msla-selection-box"
    />
    <div
      className="panel-card-main"
    >
      <div
        className="panel-card-header"
        role="button"
      >
        <div
          className="panel-card-content-container"
        >
          <div
            className="panel-card-content-gripper-section"
          />
          <div
            className="panel-card-content-icon-section"
          >
            <img
              alt=""
              className="panel-card-icon"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            />
          </div>
          <div
            className="panel-card-top-content"
          >
            <div
              className="panel-msla-title"
            >
              title
            </div>
          </div>
        </div>
      </div>
      <div
        className="msla-card-v2-footer"
      >
        <div
          className="msla-badges"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/card should render with lock secure icon 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="msla-panel-card-container"
    data-automation-id="card-title"
    data-testid="card-title"
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "borderLeft": "4px solid rgba(71,71,71, 1)",
        "borderRadius": "2px",
      }
    }
    tabIndex={1}
  >
    <div
      className="msla-selection-box"
    />
    <div
      className="panel-card-main"
    >
      <div
        className="panel-card-header"
        role="button"
      >
        <div
          className="panel-card-content-container"
        >
          <div
            className="panel-card-content-gripper-section"
          />
          <div
            className="panel-card-content-icon-section"
          >
            <div
              className="ms-Spinner msla-card-header-spinner root-110"
            >
              <div
                className="ms-Spinner-circle ms-Spinner--medium circle-111"
              />
            </div>
          </div>
          <div
            className="panel-card-top-content"
          >
            <div
              className="panel-msla-title"
            >
              title
            </div>
          </div>
        </div>
      </div>
      <div
        className="msla-card-v2-footer"
      >
        <div
          className="msla-badges"
        >
          <div
            className="ms-TooltipHost root-114"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="none"
          >
            <i
              aria-label="Secure inputs or outputs enabled.: This operation has secure inputs or outputs enabled."
              className="panel-card-v2-badge active root-117"
              data-icon-name="Lock"
              role="img"
              tabIndex={0}
            >
              
            </i>
            <div
              hidden={true}
              id="tooltip0"
              style={
                Object {
                  "border": 0,
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                }
              }
            >
              This operation has secure inputs or outputs enabled.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
